# resumex

./: .gitignore  Makefile  README.md  pyproject.toml
data/: example.md  framework.md  readme.md  resumex.db
flow/: pyproject.toml
flow/resumex/: metadata.yaml
libs/: code_mapper.py  project_structure.json
src/: database.py  flows.py  generator.py  main.py  template.html
