[project]
name = "resumex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasette>=0.65.2",
    "datasette-dashboards>=0.8.0",
    "datasette-edit-tables>=0.3a2",
    "datasette-write>=0.4",
    "htmldocx>=0.0.6",
    "jinja2>=3.1.3",
    "weasyprint>=68.1",
]

[tool.uv.workspace]
members = [
    "flow",
]
