[project]
name = "resumex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "lancedb",
    "duckdb",
    "pandas",
    "streamlit-aggrid",
    "pyarrow",
    "pygwalker",
]

[tool.uv.workspace]
members = [
    "flow",
]
