[project]
name = "resumex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "lancedb",
    "duckdb",
    "pandas",
    "streamlit-aggrid",
    "pyarrow",
    "pygwalker",
    "pathspec>=1.1.1",
]

[tool.uv.workspace]
members = [
    "flow",
]
